<resources>
    <string name="app_name">Kotlin</string>
    <string name="create_account">Create Account</string>
    <string name="caa">Create an account so you can explore all the existing jobs</string>
    <string name="email">Email</string>
    <string name="email2">Email:</string>
    <string name="pass">Password</string>
    <string name="pass2">Password:</string>
    <string name="passConf">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="haa">Already have an account</string>
    <string name="continue_with">Or continue with</string>
    <string name="google">Google</string>
    <string name="fb">Facebook</string>
    <string name="apple">Apple</string>
    <string name="checkbox">Check Box</string>
    <string name="account_created">Account Created</string>
    <string name="account_created_button_text">Back</string>
</resources>