<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_font"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintBottom_toTopOf="@id/text2"
        android:text="@string/create_account"
        android:textColor="@color/create_account"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        tools:ignore="RtlSymmetry">

    </TextView>

    <TextView
        android:id="@+id/text2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/caa"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:paddingTop="6dp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/text1"
        tools:layout_editor_absoluteY="110dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/con_with"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        android:text="@string/continue_with"
        app:layout_constraintTop_toBottomOf="@id/have_account"
        android:textAlignment="center"
        android:textColor="@color/button1"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:boxBackgroundColor="@color/mail_bg"
        app:boxStrokeColor="@color/stroke"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:hintAnimationEnabled="true"
        android:layout_marginTop="53dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:hintTextColor="@color/mail_color">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/emailInput"
        app:boxBackgroundColor="@color/mail_bg"
        app:boxStrokeColor="@color/stroke"
        app:passwordToggleEnabled="true"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:hintAnimationEnabled="false"
        android:layout_marginTop="26dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:textColorHint="@color/mail_color"
            android:inputType="numberPassword">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        app:boxBackgroundColor="@color/mail_bg"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="@color/stroke"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/passwordInput"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:hint="@string/passConf"
            app:hintTextColor="@color/mail_color">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:backgroundTint="@color/button1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password"
        android:layout_marginTop="30dp"
        app:cornerRadius="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/have_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_font"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/sign_up"
        android:layout_marginTop="15dp"
        android:text="@string/haa" />

    <ImageButton
        android:id="@+id/google_ig"
        android:layout_width="60dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:backgroundTint="@color/google"
        android:contentDescription="@string/google"
        android:src="@drawable/g_icon"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintTop_toBottomOf="@id/con_with"/>

    <ImageButton
        android:id="@+id/facebook_ig"
        android:layout_width="60dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:contentDescription="@string/fb"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        android:layout_marginStart="5dp"
        android:backgroundTint="@color/google"
        android:src="@drawable/f_icon"
        app:layout_constraintTop_toBottomOf="@id/con_with" />

    <ImageButton
        android:id="@+id/apple_ig"
        android:layout_width="60dp"
        android:layout_height="44dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:backgroundTint="@color/google"
        android:src="@drawable/apple_icon"
        android:contentDescription="@string/apple"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_goneMarginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/con_with" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="31dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp" />


</androidx.constraintlayout.widget.ConstraintLayout>